Fixed layout issues so site is responsive down to 1024px. @media needed for below

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -47,7 +47,7 @@ header{
 .logo_holder{
 	float: left;
     height: 30px;
-    width: 200px;
+    width: 15%;
     padding-left: 30px;
     padding-top: 9px;
 
@@ -76,10 +76,10 @@ nav{
 .search_holder{
 	float:left;
     padding-top: 9px;
-    width: 828px;
+    width: 60%;
 }
 .search_box{
-    width: 590px;
+    width: 80%;
     font-size: 13pt;
     height: 30px;
     float: left;
@@ -104,8 +104,12 @@ nav{
     .header_links_holder{
     	float: right;
         /*font-size:0  will remove white space on inline block elements*/
+        width: 20%;
         padding-top: 9px;
-        margin-right: 30px;
+        margin-right: 2%;
+    }
+    .header_links_holder ul{
+        text-align: right;
     }
 
     .header_links_holder li{
@@ -144,4 +148,3 @@ nav{
 
     /* **************** beginning of central content styles*/
 
-    
